# DevTrust

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: wave-1-overview.md  wave-2-overview.md  wave-3-overview.md  wave-4-overview.md
docs/landing/: DEPLOY.md  index.html  vercel.json
scripts/: release.py
src/: .gitignore  CLAUDE.md  LICENSE  README.md  TASKS.md
src/.claude/: settings.json
src/.claude/agents/: product-validator.md
src/.claude/commands/: product-spec.md  ship-checklist.md  wave-status.md
src/.claude/hooks/: README.md
src/docs/: BUILD-MODE.md  BUILD-QUEUE.md  DEFINITION-OF-DONE.md  DevTrust-Master-Plan.docx  dashboard.html
src/products/00-shared-platform/: README.md
src/products/01-repo-xray/: PRODUCT.md
src/products/01-repo-xray/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/01-repo-xray/code/src/repox/: __init__.py  __main__.py  analyzer.py  callgraph.py  callgraph_ts.py  cli.py  conventions.py  languages.py  manifests.py  models.py  output.py
src/products/01-repo-xray/code/tests/: conftest.py  test_smoke.py
src/products/02-smart-test-selector/: PRODUCT.md
src/products/02-smart-test-selector/app/: CHANGELOG.md  README.md  pyproject.toml
src/products/02-smart-test-selector/app/src/sts_app/: __init__.py  __main__.py  auth.py  clone.py  config.py  github.py  handlers.py  main.py  review.py  security.py
src/products/02-smart-test-selector/app/tests/: conftest.py  test_smoke.py
src/products/02-smart-test-selector/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/02-smart-test-selector/code/src/sts/: __init__.py  __main__.py  cli.py  diff.py  frameworks.py  models.py  output.py  repox_integration.py  selector.py
src/products/02-smart-test-selector/code/tests/: conftest.py  test_smoke.py
src/products/03-agent-pr-reviewer/: PRODUCT.md
src/products/03-agent-pr-reviewer/app/: CHANGELOG.md  README.md  pyproject.toml
src/products/03-agent-pr-reviewer/app/src/apr_app/: __init__.py  __main__.py  auth.py  config.py  github.py  handlers.py  main.py  security.py
src/products/03-agent-pr-reviewer/app/tests/: conftest.py  test_smoke.py
src/products/03-agent-pr-reviewer/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/03-agent-pr-reviewer/code/src/apr/: __init__.py  __main__.py  cli.py  engine.py  llm.py  models.py  output.py  prompts.py  repox_integration.py  rules.py  rules_ai.py  rules_js.py
src/products/03-agent-pr-reviewer/code/tests/: conftest.py  test_smoke.py
src/products/04-ci-local/: PRODUCT.md
src/products/05-dep-upgrade-pilot/: PRODUCT.md
src/products/06-agent-trace-sdk/: PRODUCT.md
src/products/06-agent-trace-sdk/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/06-agent-trace-sdk/code/src/agtrace/: __init__.py  __main__.py  cli.py  models.py  tracer.py
src/products/06-agent-trace-sdk/code/tests/: conftest.py  test_smoke.py
src/products/07-whychanged/: PRODUCT.md
src/products/07-whychanged/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/07-whychanged/code/src/whychanged/: __init__.py  __main__.py  cli.py  engine.py  models.py  output.py  providers.py  providers_github.py
src/products/07-whychanged/code/tests/: conftest.py  test_smoke.py
src/products/08-tokencost/: PRODUCT.md
src/products/08-tokencost/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/08-tokencost/code/src/tokencost/: __init__.py  __main__.py  aggregate.py  attribution.py  cli.py  models.py  output.py  prices.py  store.py
src/products/08-tokencost/code/src/tokencost/middleware/: __init__.py  anthropic.py  openai.py
src/products/08-tokencost/code/tests/: conftest.py  test_smoke.py
src/products/09-agentguard/: PRODUCT.md
src/products/09-agentguard/code/: CHANGELOG.md  README.md  pyproject.toml
src/products/09-agentguard/code/src/agentguard/: __init__.py  baseline.py  cli.py  engine.py  identity.py  models.py
src/products/09-agentguard/code/tests/: conftest.py  test_smoke.py
src/waves/: wave-1-foundation.md  wave-2-expand-ship.md  wave-3-open-run.md  wave-4-compliance.md
