[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name on PyPI is namespaced under devtrust- to (a) avoid
# collisions with common short names and (b) brand the whole platform
# cohesively. The Python module name stays `repox` (unchanged) so
# `import repox` and the `repox` CLI command continue to work as-is.
name = "devtrust-repox"
version = "0.4.0"
description = "Codebase architecture model that AI tools and other DevTrust products consume."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Abdullah Bakir" }]
keywords = ["ai", "codebase-analysis", "developer-tools", "mcp", "repo-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pathspec>=1.0.0",       # pathspec 1.x renamed gitwildmatch -> gitignore
    # JS / TS extraction (graduated to required in v0.3.0).
    "tree-sitter>=0.23.0",
    # Pin to a release line that ships Windows + Linux + macOS wheels.
    # Newer 1.x releases have dropped some platform wheels.
    "tree-sitter-language-pack>=0.4.0,<1.0",
]

[project.scripts]
repox = "repox.cli:app"

[project.urls]
Homepage = "https://github.com/AbdullahBakir97/DevTrust"
Repository = "https://github.com/AbdullahBakir97/DevTrust"
Documentation = "https://github.com/AbdullahBakir97/DevTrust/tree/main/src/products/01-repo-xray/code#readme"
Changelog = "https://github.com/AbdullahBakir97/DevTrust/blob/main/src/products/01-repo-xray/code/CHANGELOG.md"
Issues = "https://github.com/AbdullahBakir97/DevTrust/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/repox"]
