[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Namespaced to match the platform; module name stays `sts_app`.
name = "devtrust-sts-app"
version = "0.0.3"
description = "GitHub App that runs Smart Test Selector on PRs and posts the verdict as a comment."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Abdullah Bakir" }]
keywords = ["ci", "developer-tools", "github-app", "test-selection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "pyjwt[crypto]>=2.9.0",  # JWT signing for GitHub App auth (v0.0.2+)
    # Workspace dep on sts (the engine the app drives).
    "devtrust-sts",
]

[project.scripts]
sts-app = "sts_app.__main__:main"

[project.urls]
Homepage = "https://github.com/AbdullahBakir97/DevTrust"
Repository = "https://github.com/AbdullahBakir97/DevTrust"
Documentation = "https://github.com/AbdullahBakir97/DevTrust/tree/main/src/products/02-smart-test-selector/app#readme"
Changelog = "https://github.com/AbdullahBakir97/DevTrust/blob/main/src/products/02-smart-test-selector/app/CHANGELOG.md"
Issues = "https://github.com/AbdullahBakir97/DevTrust/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sts_app"]

[tool.uv.sources]
devtrust-sts = { workspace = true }
