[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apr-app"
version = "0.0.1"
description = "GitHub App that runs Agent-PR Reviewer on pull requests and posts findings as a sticky comment."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Abdullah Bakir" }]
keywords = ["ci", "code-review", "developer-tools", "github-app", "pr-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "pyjwt[crypto]>=2.9.0",
    # Workspace dep on the apr engine.
    "apr",
]

[project.scripts]
apr-app = "apr_app.__main__:main"

[project.urls]
Homepage = "https://github.com/AbdullahBakir97/DevTrust"
Repository = "https://github.com/AbdullahBakir97/DevTrust"
Documentation = "https://github.com/AbdullahBakir97/DevTrust/tree/main/src/products/03-agent-pr-reviewer/app#readme"
Changelog = "https://github.com/AbdullahBakir97/DevTrust/blob/main/src/products/03-agent-pr-reviewer/app/CHANGELOG.md"
Issues = "https://github.com/AbdullahBakir97/DevTrust/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apr_app"]

[tool.uv.sources]
apr = { workspace = true }
