[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Namespaced for platform consistency; module name stays `agtrace`.
name = "devtrust-agtrace"
version = "0.0.2"
description = "Agent-aware tracing: spans, events, and tool calls for LLM-driven workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Abdullah Bakir" }]
keywords = ["llm", "agents", "observability", "telemetry", "tracing", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
]

[project.scripts]
agtrace = "agtrace.cli:app"

[project.urls]
Homepage = "https://github.com/AbdullahBakir97/DevTrust"
Repository = "https://github.com/AbdullahBakir97/DevTrust"
Documentation = "https://github.com/AbdullahBakir97/DevTrust/tree/main/src/products/06-agent-trace-sdk/code#readme"
Changelog = "https://github.com/AbdullahBakir97/DevTrust/blob/main/src/products/06-agent-trace-sdk/code/CHANGELOG.md"
Issues = "https://github.com/AbdullahBakir97/DevTrust/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agtrace"]
