[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whychanged"
version = "0.1.0"
description = "Production diff-detective: when something breaks, what actually changed?"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Abdullah Bakir" }]
keywords = ["incident-response", "observability", "developer-tools", "change-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",     # GitHubDeploymentsProvider (v0.1+)
]

[project.scripts]
whychanged = "whychanged.cli:app"

[project.urls]
Homepage = "https://github.com/AbdullahBakir97/DevTrust"
Repository = "https://github.com/AbdullahBakir97/DevTrust"
Documentation = "https://github.com/AbdullahBakir97/DevTrust/tree/main/src/products/07-whychanged/code#readme"
Changelog = "https://github.com/AbdullahBakir97/DevTrust/blob/main/src/products/07-whychanged/code/CHANGELOG.md"
Issues = "https://github.com/AbdullahBakir97/DevTrust/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whychanged"]
