[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokencost"
version = "0.0.3"
description = "Financial-grade attribution for LLM spend: per-feature, per-team, per-customer."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Abdullah Bakir" }]
keywords = ["llm", "cost", "observability", "developer-tools", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
]

[project.scripts]
tokencost = "tokencost.cli:app"

[project.urls]
Homepage = "https://github.com/AbdullahBakir97/DevTrust"
Repository = "https://github.com/AbdullahBakir97/DevTrust"
Documentation = "https://github.com/AbdullahBakir97/DevTrust/tree/main/src/products/08-tokencost/code#readme"
Changelog = "https://github.com/AbdullahBakir97/DevTrust/blob/main/src/products/08-tokencost/code/CHANGELOG.md"
Issues = "https://github.com/AbdullahBakir97/DevTrust/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tokencost"]
